enabled concatenated js flow for controllers and services and enabled less stylesheets

--- a/templates/package.json
+++ b/templates/package.json
@@ -10,10 +10,13 @@
   "dependencies": {
     "coffee-script": "*",
     "gulp": "*",
-    "gulp-coffee": "*",
+    "gulp-concat": "*",
     "gulp-util": "*",
     "gulp-watch": "*",
     "gulp-print": "*",
+    "gulp-coffee": "*",
+    "gulp-sourcemaps": "*",
+    "gulp-less": "*",
     "bower": "*",
     "ecstatic": "*"
   },
